--- a/test.ipynb
+++ b/test.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Performing AirNowAPI request...\n",
-      "Download URL:  https://airnowapi.org/aq/data/?startdate=2014-09-23t22&enddate=2014-09-23t23&parameters=o3,pm25&bbox=-90.806632,24.634217,-71.119132,45.910790&datatype=a&format=application/json&api_key=2227FB9E-63AE-497B-A911-03E91430AEA1\n",
-      "Download File:  C:\\Users\\Aditya\\AirNowAPI_20241922111929.kml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -66,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The file Output.kml does not exist.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import webbrowser\n",
     "import os\n",
@@ -91,32 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "GeocoderInsufficientPrivileges",
-     "evalue": "Non-successful status code 403",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAdapterHTTPError\u001b[0m                          Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\Aditya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\geocoders\\base.py:368\u001b[0m, in \u001b[0;36mGeocoder._call_geocoder\u001b[1;34m(self, url, callback, timeout, is_json, headers)\u001b[0m\n\u001b[0;32m    367\u001b[0m \u001b[39mif\u001b[39;00m is_json:\n\u001b[1;32m--> 368\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49madapter\u001b[39m.\u001b[39;49mget_json(url, timeout\u001b[39m=\u001b[39;49mtimeout, headers\u001b[39m=\u001b[39;49mreq_headers)\n\u001b[0;32m    369\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\Aditya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\adapters.py:472\u001b[0m, in \u001b[0;36mRequestsAdapter.get_json\u001b[1;34m(self, url, timeout, headers)\u001b[0m\n\u001b[0;32m    471\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_json\u001b[39m(\u001b[39mself\u001b[39m, url, \u001b[39m*\u001b[39m, timeout, headers):\n\u001b[1;32m--> 472\u001b[0m     resp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_request(url, timeout\u001b[39m=\u001b[39;49mtimeout, headers\u001b[39m=\u001b[39;49mheaders)\n\u001b[0;32m    473\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\Aditya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\adapters.py:500\u001b[0m, in \u001b[0;36mRequestsAdapter._request\u001b[1;34m(self, url, timeout, headers)\u001b[0m\n\u001b[0;32m    499\u001b[0m     \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus_code \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m400\u001b[39m:\n\u001b[1;32m--> 500\u001b[0m         \u001b[39mraise\u001b[39;00m AdapterHTTPError(\n\u001b[0;32m    501\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mNon-successful status code \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m resp\u001b[39m.\u001b[39mstatus_code,\n\u001b[0;32m    502\u001b[0m             status_code\u001b[39m=\u001b[39mresp\u001b[39m.\u001b[39mstatus_code,\n\u001b[0;32m    503\u001b[0m             headers\u001b[39m=\u001b[39mresp\u001b[39m.\u001b[39mheaders,\n\u001b[0;32m    504\u001b[0m             text\u001b[39m=\u001b[39mresp\u001b[39m.\u001b[39mtext,\n\u001b[0;32m    505\u001b[0m         )\n\u001b[0;32m    507\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
-      "\u001b[1;31mAdapterHTTPError\u001b[0m: Non-successful status code 403",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mGeocoderInsufficientPrivileges\u001b[0m            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Aditya\\Desktop\\USC\\AirNow\\test.ipynb Cell 3\u001b[0m line \u001b[0;36m7\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m     plt\u001b[39m.\u001b[39mshow()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m     main()\n",
-      "\u001b[1;32mc:\\Users\\Aditya\\Desktop\\USC\\AirNow\\test.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     lat, lon \u001b[39m=\u001b[39m get_current_location()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     options \u001b[39m=\u001b[39m {}\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     options[\u001b[39m\"\u001b[39m\u001b[39murl\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhttps://airnowapi.org/aq/data/\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[1;32mc:\\Users\\Aditya\\Desktop\\USC\\AirNow\\test.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_current_location\u001b[39m():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m     geolocator \u001b[39m=\u001b[39m Nominatim(user_agent\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mgeoapiExercises\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     location \u001b[39m=\u001b[39m geolocator\u001b[39m.\u001b[39;49mgeocode(\u001b[39m\"\u001b[39;49m\u001b[39mYour Address\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Aditya/Desktop/USC/AirNow/test.ipynb#W2sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m location\u001b[39m.\u001b[39mlatitude, location\u001b[39m.\u001b[39mlongitude\n",
-      "File \u001b[1;32mc:\\Users\\Aditya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\geocoders\\nominatim.py:297\u001b[0m, in \u001b[0;36mNominatim.geocode\u001b[1;34m(self, query, exactly_one, timeout, limit, addressdetails, language, geometry, extratags, country_codes, viewbox, bounded, featuretype, namedetails)\u001b[0m\n\u001b[0;32m    295\u001b[0m logger\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m.geocode: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, url)\n\u001b[0;32m    296\u001b[0m callback \u001b[39m=\u001b[39m partial(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_parse_json, exactly_one\u001b[39m=\u001b[39mexactly_one)\n\u001b[1;32m--> 297\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_geocoder(url, callback, timeout\u001b[39m=\u001b[39;49mtimeout)\n",
-      "File \u001b[1;32mc:\\Users\\Aditya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\geocoders\\base.py:388\u001b[0m, in \u001b[0;36mGeocoder._call_geocoder\u001b[1;34m(self, url, callback, timeout, is_json, headers)\u001b[0m\n\u001b[0;32m    386\u001b[0m         \u001b[39mreturn\u001b[39;00m callback(result)\n\u001b[0;32m    387\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m error:\n\u001b[1;32m--> 388\u001b[0m     res \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_adapter_error_handler(error)\n\u001b[0;32m    389\u001b[0m     \u001b[39mif\u001b[39;00m res \u001b[39mis\u001b[39;00m NONE_RESULT:\n\u001b[0;32m    390\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Aditya\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\geopy\\geocoders\\base.py:411\u001b[0m, in \u001b[0;36mGeocoder._adapter_error_handler\u001b[1;34m(self, error)\u001b[0m\n\u001b[0;32m    407\u001b[0m         \u001b[39mraise\u001b[39;00m exc_cls(\n\u001b[0;32m    408\u001b[0m             \u001b[39mstr\u001b[39m(error), retry_after\u001b[39m=\u001b[39mget_retry_after(error\u001b[39m.\u001b[39mheaders)\n\u001b[0;32m    409\u001b[0m         ) \u001b[39mfrom\u001b[39;00m \u001b[39merror\u001b[39;00m\n\u001b[0;32m    410\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 411\u001b[0m         \u001b[39mraise\u001b[39;00m exc_cls(\u001b[39mstr\u001b[39m(error)) \u001b[39mfrom\u001b[39;00m \u001b[39merror\u001b[39;00m\n\u001b[0;32m    412\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    413\u001b[0m     res \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_geocoder_exception_handler(error)\n",
-      "\u001b[1;31mGeocoderInsufficientPrivileges\u001b[0m: Non-successful status code 403"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
@@ -364,19 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"DateObserved\",\"HourObserved\",\"LocalTimeZone\",\"ReportingArea\",\"StateCode\",\"Latitude\",\"Longitude\",\"ParameterName\",\"AQI\",\"CategoryNumber\",\"CategoryName\"\n",
-      "\"2024-06-21\",\"0\",\"PST\",\"San Francisco\",\"CA\",\"37.75\",\"-122.43\",\"PM2.5\",\"31\",\"1\",\"Good\"\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -484,7 +433,161 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.edge.service import Service\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time\n",
+    "import os\n",
+    "import csv\n",
+    "import gpxpy\n",
+    "from datetime import datetime\n",
+    "from xml.etree import ElementTree\n",
+    "import requests\n",
+    "import math\n",
+    "import pandas as pd\n",
+    "\n",
+    "class Test:\n",
+    "    def __init__(self):\n",
+    "        self.driver = None\n",
+    "        self.service = None\n",
+    "        self.wait_time = 5\n",
+    "        self.base_url = 'https://www.airnowapi.org/aq/observation/latLong/historical'\n",
+    "\n",
+    "    def create_driver(self):\n",
+    "        self.service = Service(r'C://Users/Aditya/Downloads/msedgedriver.exe')\n",
+    "        self.driver = webdriver.Edge(service=self.service)\n",
+    "\n",
+    "    def close_driver(self):\n",
+    "        self.driver.quit()\n",
+    "\n",
+    "    def navigate_to_url(self, url):\n",
+    "        self.driver.get(url)\n",
+    "\n",
+    "    def sleep(self):\n",
+    "        time.sleep(self.wait_time)\n",
+    "\n",
+    "    def parse_output_text(self, output_text):\n",
+    "        lines = output_text.split('\\n')\n",
+    "        headers = [header.replace('\"', '') for header in lines[0].split(',')]\n",
+    "        data = []\n",
+    "        for line in lines[1:]:\n",
+    "            values = [value.replace('\"', '') for value in line.split(',')]\n",
+    "            data.append(dict(zip(headers, values)))\n",
+    "        return data\n",
+    "        \n",
+    "    def scrape_data(self, bounding_box, date):\n",
+    "        hour_holder = date.split(' ')[1]\n",
+    "        hour = hour_holder.split(':')[0]\n",
+    "        date = date.split(' ')[0]\n",
+    "        bounding_box = bounding_box.replace('[', '')\n",
+    "        bounding_box = bounding_box.replace(']', '')\n",
+    "        bounding_box = bounding_box.split(',')\n",
+    "        bounding_box = [float(x) for x in bounding_box]\n",
+    "        self.create_driver()\n",
+    "        self.navigate_to_url('https://docs.airnowapi.org/login')\n",
+    "        self.sleep()\n",
+    "        username_field = WebDriverWait(self.driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.ID, 'username'))\n",
+    "        )\n",
+    "        password_field = self.driver.find_element(By.ID, 'password')\n",
+    "        login_button = self.driver.find_element(By.NAME, 'exec')\n",
+    "        username_field.send_keys('aditya_25')\n",
+    "        password_field.send_keys('aditya_25@AirNow')\n",
+    "        login_button.click()\n",
+    "        self.sleep()\n",
+    "        self.navigate_to_url(\n",
+    "            'https://docs.airnowapi.org/Data/query')\n",
+    "\n",
+    "        start_date = WebDriverWait(self.driver, 10).until(\n",
+    "            EC.presence_of_element_located(\n",
+    "                (By.ID, 'beginDateSelectorWpr_dateSelector'))\n",
+    "        )\n",
+    "        start_hour = self.driver.find_element(\n",
+    "            By.ID, 'beginDateSelectorWpr_hourSelector')\n",
+    "        end_date = self.driver.find_element(\n",
+    "            By.ID, 'endDateSelectorWpr_dateSelector')\n",
+    "        end_hour = self.driver.find_element(\n",
+    "            By.ID, 'endDateSelectorWpr_hourSelector')\n",
+    "        bBoxMaxY = self.driver.find_element(\n",
+    "            By.ID, 'bBoxMaxY')\n",
+    "        bBoxMaxX = self.driver.find_element(\n",
+    "            By.ID, 'bBoxMaxX')\n",
+    "        bBoxMinY = self.driver.find_element(\n",
+    "            By.ID, 'bBoxMinY')\n",
+    "        bBoxMinX = self.driver.find_element(\n",
+    "            By.ID, 'bBoxMinX')\n",
+    "        ozone = self.driver.find_element(\n",
+    "            By.ID, 'ozoneSel')\n",
+    "        pm25 = self.driver.find_element(\n",
+    "            By.ID, 'pm25Sel')\n",
+    "        pm10 = self.driver.find_element(\n",
+    "            By.ID, 'pm10Sel')\n",
+    "        co = self.driver.find_element(\n",
+    "            By.ID, 'coSel')\n",
+    "        no2 = self.driver.find_element(\n",
+    "            By.ID, 'no2Sel')\n",
+    "        so2 = self.driver.find_element(\n",
+    "            By.ID, 'so2Sel')\n",
+    "        formatSelect = self.driver.find_element(\n",
+    "            By.ID, 'formatSelect')\n",
+    "\n",
+    "        button = self.driver.find_element(\n",
+    "            By.ID, 'buildUrl')\n",
+    "\n",
+    "        start_date.send_keys(date)\n",
+    "        start_hour.send_keys(hour)\n",
+    "\n",
+    "        end_date.send_keys(date)\n",
+    "        end_hour.send_keys(hour)\n",
+    "\n",
+    "        bBoxMaxY.send_keys(bounding_box[3])\n",
+    "        bBoxMaxX.send_keys(bounding_box[2])\n",
+    "        bBoxMinY.send_keys(bounding_box[1])\n",
+    "        bBoxMinX.send_keys(bounding_box[0])\n",
+    "\n",
+    "        if not pm10.is_selected():\n",
+    "            pm10.click()\n",
+    "        if not pm25.is_selected():\n",
+    "            pm25.click()\n",
+    "        if not ozone.is_selected():\n",
+    "            ozone.click()\n",
+    "        if not no2.is_selected():\n",
+    "            no2.click()\n",
+    "        if not so2.is_selected():\n",
+    "            so2.click()\n",
+    "        if not co.is_selected():\n",
+    "            co.click()\n",
+    "\n",
+    "        formatSelect.click()\n",
+    "        formatSelect.send_keys('application/json')\n",
+    "\n",
+    "        button.click()\n",
+    "        self.sleep()\n",
+    "\n",
+    "        output = WebDriverWait(self.driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.ID, 'urlView'))\n",
+    "        )\n",
+    "        self.sleep()\n",
+    "        main_button = self.driver.find_element(By.ID, 'runItBtn')\n",
+    "        main_button.click()\n",
+    "        final_output = WebDriverWait(self.driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.ID, 'outputView'))\n",
+    "        )\n",
+    "        self.sleep()\n",
+    "        final_output_text = final_output.text\n",
+    "        output_data = self.parse_output_text(final_output_text)\n",
+    "        print(output_data)\n",
+    "        self.close_driver()\n",
+    "\n",
+    "\n",
+    "test = Test()\n",
+    "test.scrape_data(\n",
+    "    \"[-124.205070, 28.716781, -75.337882, 45.419415]\", '2024-06-23 22:00:00')"
+   ]
   }
  ],
  "metadata": {
